hphp/hack/test/typecheck/fc_enum_case_4.php.exp
File "fc_enum_case_4.php", line 23, characters 10-17:
Switching on enum Bar but using constant from Baz (Typing[4023])
